@@ -362,6 +362,7 @@ function error621ChangeSlider() {
 		<option value="Cat">Cat</option>
 		<option value="Cheetah">Cheetah</option>
 		<option value="Coyote">Coyote</option>
+		<option value="Deer">Deer</option>
 		<option value="Dog">Dog</option>
 		<option value="Dragon">Dragon</option>
 		<option value="Ferret">Ferret</option>
