@@ -356,36 +356,37 @@ function error621ChangeSlider() {
   &nbsp;Species 
   
   &nbsp;&nbsp;&nbsp;
-  <select class="select_box" id="speciesChoice" onchange="realScaliesDontHaveFluff()">
-  <option value="Default">Default</option>
-  <option value="Arctic Fox">Arctic Fox</option>
-  <option value="Bear">Bear</option>
-  <option value="Cat">Cat</option>
-  <option value="Cheetah">Cheetah</option>
-  <option value="Coyote">Coyote</option>
-  <option value="Dog">Dog</option>
-  <option value="Dragon">Dragon</option>
-  <option value="Ferret">Ferret</option>
-  <option value="Even Bigger Bottom">Folf</option>
-  <option value="Bottom">Fox</option>
-  <option value="Horse">Horse</option>
-  <option value="Husky">Husky</option>
-  <option value="Hyena">Hyena</option>
-  <option value="Kangaroo">Kangaroo</option>
-  <option value="Kobold">Kobold</option>
-  <option value="Lion">Lion</option>
-  <option value="Otter">Otter</option>
-  <option value="Panther">Panther</option>
-  <option value="Protogen">Protogen</option>
-  <option value="Rabbit">Rabbit</option>
-  <option value="Raccoon">Raccoon</option>
-  <option value="Sergal">Sergal</option>
-  <option value="Shark">Shark</option>
-  <option value="Skunk">Skunk</option>
-  <option value="Snow Leopard">Snow Leopard</option>
-  <option value="Tiger">Tiger</option>
-  <option value="Wolf">Wolf</option>
-  <option value="Discount Dragon">Wyvern</option>
+		<select class="select_box" id="speciesChoice" onchange="realScaliesDontHaveFluff()">
+		<option value="Default">Default</option>
+		<option value="Arctic Fox">Arctic Fox</option>
+		<option value="Bear">Bear</option>
+		<option value="Cat">Cat</option>
+		<option value="Cheetah">Cheetah</option>
+		<option value="Coyote">Coyote</option>
+		<option value="Deer">Deer</option>
+		<option value="Dog">Dog</option>
+		<option value="Dragon">Dragon</option>
+		<option value="Ferret">Ferret</option>
+		<option value="Even Bigger Bottom">Folf</option>
+		<option value="Bottom">Fox</option>
+		<option value="Horse">Horse</option>
+		<option value="Husky">Husky</option>
+		<option value="Hyena">Hyena</option>
+		<option value="Kangaroo">Kangaroo</option>
+		<option value="Kobold">Kobold</option>
+		<option value="Lion">Lion</option>
+		<option value="Otter">Otter</option>
+		<option value="Panther">Panther</option>
+		<option value="Protogen">Protogen</option>
+		<option value="Rabbit">Rabbit</option>
+		<option value="Raccoon">Raccoon</option>
+		<option value="Sergal">Sergal</option>
+		<option value="Shark">Shark</option>
+		<option value="Skunk">Skunk</option>
+		<option value="Snow Leopard">Snow Leopard</option>
+		<option value="Tiger">Tiger</option>
+		<option value="Wolf">Wolf</option>
+		<option value="Discount Dragon">Wyvern</option>
 	</select>
 	</div>
 
